/* (c) https://github.com/MontiCore/monticore */
import org.gradle.api.tasks.testing.logging.TestExceptionFormat
import org.gradle.api.tasks.testing.logging.TestLogEvent

plugins {
  // Eclipse compiler as it's much faster than javac
  // Since the root project does not contain java code, it is only applied to the subprojects
  id "io.github.themrmilchmann.ecj" version "0.2.0" apply false
  id "org.sonarqube" version "3.0"
  id "jacoco"
  id 'org.barfuin.gradle.jacocolog' version '3.1.0'
  id 'de.monticore.generator' version "$version" apply false // see https://monticore.github.io/monticore/docs/Gradle/#root-warning
}

sonarqube {
  properties {
    property 'sonar.host.url', 'https://metric.se.rwth-aachen.de'
    property 'sonar.sourceEncoding', 'UTF-8'
    property 'sonar.projectKey', 'de.monticore:monticore'
    property 'sonar.exclusions', '**/target/generated-sources/**'
    property 'sonar.jacoco.reportPath', 'target/jacoco/jacocoMergeSubprojects.exec'
  }
}

allprojects {
  group = "de.monticore"

  ext.grammarDir = 'src/main/grammars'
  layout.buildDirectory = layout.projectDirectory.dir("target")

  repositories {
    if(("true").equals(getProperty('useLocalRepo'))){
      mavenLocal()
    }
    maven {
      credentials.username = mavenUser
      credentials.password = mavenPassword
      url = repo
    }
    mavenCentral()
  }

  pluginManager.withPlugin('maven-publish', {
    // If publishing is set up, add the MontiCore 3-Level License Model to every publication
    publishing.publications.configureEach {
      pom {
        licenses {
          license {
            name = 'MontiCore 3-Level License Model'
            url = 'https://monticore.github.io/monticore/00.org/Licenses/LICENSE-MONTICORE-3-LEVEL/'
          }
        }
      }
    }
  })

}

subprojects {
  apply plugin: 'java-library'
  apply plugin: 'io.github.themrmilchmann.ecj'

  ecj {
    compilerVersion = "3.44.0"
  }

  tasks.withType(Test).configureEach {
    useJUnitPlatform()
    maxHeapSize = "1g"
    testLogging {
      // controls whether test output is shown
      showStandardStreams = !("false").equals(getProperty('showTestOutput'))
      showExceptions = true
      showCauses = true
      showStackTraces = true
      exceptionFormat = TestExceptionFormat.FULL
      info {
        events TestLogEvent.FAILED,
            TestLogEvent.PASSED,
            TestLogEvent.SKIPPED,
            TestLogEvent.STANDARD_OUT
      }
    }
    addTestListener(new TestListener() {
      void afterTest(TestDescriptor testDescriptor, TestResult result) {
        logger.lifecycle "${testDescriptor.getClassName()} > ${testDescriptor.parent && testDescriptor.parent.getName() != testDescriptor.getClassName() ? testDescriptor.parent.getName() + " " + testDescriptor.getDisplayName() : testDescriptor.getName()} ${result.resultType}"
      }

      void afterSuite(TestDescriptor suite, TestResult result) {
        if (!suite.parent) { // will match the outermost suite
          def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
          def startItem = '|  ', endItem = '  |'
          logger.lifecycle startItem + output + endItem
        }
      }

      // Required for Gradle version < 9.x
      void beforeSuite(TestDescriptor suite) {
      }

      void beforeTest(TestDescriptor testDescriptor) {
      }
    })
    reports {
      html.required = false
    }
  }

  tasks.withType(JavaCompile).configureEach {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    options.encoding = "UTF-8"
    options.deprecation = false
    options.warnings = false
    options.forkOptions.jvmArgs += ["-Xmx4G"]
  }
  java {
    withSourcesJar()
    toolchain {
      languageVersion = JavaLanguageVersion.of(21)
    }
  }
  
  
}

/**
 *  Builds the core projects, i.e. the generator, runtime and grammar library.
 *  Executes JUnit tests and assembles the jars.
 */
tasks.register("buildMC") {
  group = "build"
  description ='Builds the core projects, i.e. the generator, runtime and grammar library.'
  dependsOn ":monticore-grammar:build"
  dependsOn ":monticore-runtime:build"
  if(("true").equals(getProperty('genEMF'))) {
    dependsOn ":monticore-runtime-emf:build"
    dependsOn ":monticore-grammar-emf:build"
  }
}

buildMC.dependsOn(gradle.includedBuilds*.task(':build'))

/**
 *  Assembles the core projects, i.e. the generator, runtime and grammar library.
 *  Assembles the jars but does not execute JUnit tests.
 */
tasks.register("assembleMC") {
  group = "build"
  description ='Assembles the core projects, i.e. the generator, runtime and grammar library.'
  dependsOn ":monticore-grammar:assemble"
  dependsOn ":monticore-runtime:assemble"
  if(("true").equals(getProperty('genEMF'))) {
    dependsOn ":monticore-runtime-emf:assemble"
    dependsOn ":monticore-grammar-emf:assemble"
  }
}

assembleMC.dependsOn(gradle.includedBuilds*.task(':assemble'))

/**
 *  Executes JUnit tests of the core projects, i.e. the generator, runtime and grammar library.
 */
tasks.register("testMC") {
  group = "build"
  description ='Tests the core projects, i.e. the generator, runtime and grammar library.'

  dependsOn ":monticore-grammar:test"
  dependsOn ":monticore-runtime:test"
  if(("true").equals(getProperty('genEMF'))) {
    dependsOn ":monticore-runtime-emf:test"
    dependsOn ":monticore-grammar-emf:test"
  }
}

testMC.dependsOn(gradle.includedBuilds*.task(':test'))

/**
 *  Publishes the jars of the core projects, i.e. the generator, runtime and grammar library
 *  to the nexus repository.
 *  Assembles the jars and publishes them, but does not execute JUnit tests.
 */
tasks.register("deployMC") {
  group = "build"
  description = 'Publishes the core projects, i.e. the generator, runtime and grammar library.'

  dependsOn ":monticore-grammar:publish"
  dependsOn ":monticore-runtime:publish"
  dependsOn ":monticore-libraries:stream-symbols:publish"
  dependsOn ":monticore-libraries:javagen-runtime:publish"
  if(("true").equals(getProperty('genEMF'))) {
    dependsOn ":monticore-runtime-emf:publish"
    dependsOn ":monticore-grammar-emf:publish"
  }

}

deployMC.dependsOn(gradle.includedBuilds*.task(':publish'))

/**
 *  Publishes the jars of the core projects, i.e. the generator, runtime and grammar library
 *  to the local m2 repository. Typically this should not be needed.
 *  Assembles the jars and publishes them, but does not execute JUnit tests.
 */
tasks.register("publishMCToMavenLocal") {
  group = "build"
  description = 'Publishes the core projects, i.e. the generator, runtime and grammar library' +
          'to the local maven repository.'
  dependsOn ":monticore-grammar:publishToMavenLocal"
  dependsOn ":monticore-runtime:publishToMavenLocal"
  dependsOn ":monticore-libraries:stream-symbols:publishToMavenLocal"
  if(("true").equals(getProperty('genEMF'))) {
    dependsOn ":monticore-runtime-emf:publishToMavenLocal"
    dependsOn   ":monticore-grammar-emf:publishToMavenLocal"
  }
}

publishMCToMavenLocal.dependsOn(gradle.includedBuilds*.task(':publishToMavenLocal'))

/**
 *  Build the test projects, i.e. integration tests and experiments.
 *  This includes code generation for these projects and JUnit tests.
 */
tasks.register("testIT") {
  group = "build"
  description = 'Build the test projects, i.e. integration tests and experiments.'

  dependsOn(
          project(":monticore-test").subprojects.collect {
            it.tasks.getByName "test"
          }
  )
}

tasks.register("sonarMC", GradleBuild) {
  description = 'Generates code coverage'
  dependsOn(
          ":testMC"
  )
  tasks = [ 'jacocoMergeSubprojects', 'sonarqube' ]
}

def projectsToConfigure = [
  project(':monticore-grammar'),
  project(':monticore-runtime'),
  project(':monticore-libraries:stream-symbols'),
  project(':monticore-libraries:javagen-runtime'),
]
if(("true").equals(getProperty('genEMF'))) {
    projectsToConfigure << project(':monticore-grammar-emf')
    projectsToConfigure << project(':monticore-runtime-emf')
}
configure(projectsToConfigure){
  apply plugin: 'maven-publish'
  
  // configure deployment
  publishing {
    publications {
      maven(MavenPublication) {
        from(components.java)
      }
    }
    repositories {
      maven {
        name = "SE-Nexus"
        credentials.username = mavenUser
        credentials.password = mavenPassword
        def releasesRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-releases/"
        def snapshotsRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-snapshots/"
        url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
      }
      // Also publish to the github repository, if run on a github action
      if (System.getenv("GITHUB_REPOSITORY") != null) {
        maven {
          name = "GitHubPackages"
          url = "https://maven.pkg.github.com/" + System.getenv("GITHUB_REPOSITORY")
          credentials {
            username = System.getenv("GITHUB_ACTOR")
            password = System.getenv("GITHUB_TOKEN")
          }
        }
      }
    }
  }
}

defaultTasks 'build'

